Fixed letter spacing and padding for <ul> and <ol> items.

--- a/client/containers/Pub/PubDocument/pubBody.scss
+++ b/client/containers/Pub/PubDocument/pubBody.scss
@@ -60,12 +60,10 @@
 	p,
 	li {
 		font-family: $body-font;
-		letter-spacing: 0.01rem;
 		font-weight: 400;
 		font-style: normal;
 		line-height: 1.7;
-		letter-spacing: -0.003em;
-		margin: 0em 0em 1em;
+		margin: 0em;
 		word-break: break-word;
 	}
 	li {
@@ -78,7 +76,7 @@
 	}
 	ul,
 	ol {
-		padding-left: 1em;
+		padding-left: 2em;
 		margin: 0em 0em 1em;
 		ul,
 		ol {
